fix: manual, sre porvenir finish

--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -238,7 +238,8 @@
                             alt />
                         <a style="white-space: nowrap"
                             class="d-block button-oc-2024 mt-3"
-                            href>Ver más</a>
+                            target="_blank"
+                            href="/assets/img/el-porvenir/porvenir-flora-y-fauna.png">Ver más</a>
                     </div>
 
                     <div
@@ -305,7 +306,7 @@
                                             class="d-flex align-items-center card-interactive-icons__container">
                                             <div
                                                 class="card-interactive-icons___box-icon"
-                                                style="--border-fill: #21a605">
+                                                style="--border-fill: #28fe02">
                                                 <svg
                                                     data-name="Vector Smart Object"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -406,7 +407,7 @@
                                             </div>
                                         </div>
 
-                                        <div data-target="cusiana-monitoreo-2"
+                                        <div data-target="porvenir-monitoreo-2"
                                             style="gap: 16px"
                                             class="d-flex align-items-center mt-3 card-interactive-icons__container">
                                             <div
@@ -750,7 +751,7 @@
                                             </div>
                                         </div>
 
-                                        <div data-target="cusiana-monitoreo-6"
+                                        <div data-target="porvenir-monitoreo-6"
                                             style="gap: 16px"
                                             class="d-flex align-items-center mt-3 card-interactive-icons__container">
                                             <div
@@ -2299,14 +2300,15 @@
                                                         xmlns="http://www.w3.org/2000/svg"
                                                         width="33.999"
                                                         height="33.999"
-                                                        viewBox="0 0 33.999 33.999">
+                                                        viewBox="0 0 33.999 33.999"
+                                                        style="overflow: visible;">
                                                         <g
                                                             data-name="Grupo 645">
                                                             <path
                                                                 data-name="Sustracción 3"
                                                                 d="M-7471 418.494a16.881 16.881 0 0 1-12.016-4.978 16.887 16.887 0 0 1-4.984-12.022 16.888 16.888 0 0 1 4.979-12.021 16.889 16.889 0 0 1 12.021-4.979z"
                                                                 transform="translate(7488 -384.494)"
-                                                                style="fill: #0036ff" />
+                                                                style="fill: #0036ff; stroke: #ffffff; stroke-width: 1px;" />
                                                             <path
                                                                 data-name="Sustracción 4"
                                                                 d="M-7471 418.494a16.881 16.881 0 0 1-12.016-4.978 16.887 16.887 0 0 1-4.984-12.022 16.888 16.888 0 0 1 4.979-12.021 16.889 16.889 0 0 1 12.021-4.979z"
@@ -3022,15 +3024,9 @@
                                         <span style="--outline-color: #21a605;left: 593px;top: 357px;" class="location-map-dot"></span>
                                     </div>
 
-                                    <div
-                                        class="dots-map-2024 dots-monitoreo d-none"
-                                        id="cusiana-monitoreo-2">
-                                        <span
-                                            style="--outline-color: #e3ff00; left: 780px; top: 245px"
-                                            class="location-map-dot"></span>
-                                        <span
-                                            style="--outline-color: #e3ff00; left: 750px; top: 229px"
-                                            class="location-map-dot"></span>
+                                    <div class="dots-map-2024 dots-monitoreo d-none" id="porvenir-monitoreo-2">
+                                        <span style="--outline-color: #e3ff00;left: 738px;top: 262px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #e3ff00;left: 715px;top: 250px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-3">
@@ -3049,15 +3045,9 @@
                                         <span style="--outline-color: #00fffc;left: 116px;top: 234px;" class="location-map-dot"></span>
                                     </div>
 
-                                    <div
-                                        class="dots-map-2024 dots-monitoreo d-none"
-                                        id="cusiana-monitoreo-6">
-                                        <span
-                                            style="--outline-color: #00ccff; left: 783px; top: 236px;"
-                                            class="location-map-dot"></span>
-                                        <span
-                                            style="--outline-color: #00ccff; left: 573px; top: 285px;"
-                                            class="location-map-dot"></span>
+                                    <div class="dots-map-2024 dots-monitoreo d-none" id="porvenir-monitoreo-6">
+                                        <span style="--outline-color: #00ccff;left: 739px;top: 257px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #00ccff;left: 559px;top: 273px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="porvenir-monitoreo-factores-emision">
@@ -3129,6 +3119,8 @@
                                         <span style="--outline-color: #ff5512;left: 741px;top: 329px;" class="location-map-dot"></span>
                                         <!-- Item 34 -->
                                         <span style="--outline-color: #ff5512;left: 739px;top: 337px;" class="location-map-dot"></span>
+                                        <!-- Item 35 -->
+                                        <span style="--outline-color: #ff5512;left: 416px;top: 295px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-7">
@@ -3512,17 +3504,19 @@
 
                                     <!-- Puntos SRE -->
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="porvenir-sre-1">
-                                        <a download="" href="/assets/docs/porvenir/interno/PCO-EPOR-01 ajuste 2024.pdf" style="--outline-color: none;left: 611px;top: 229px;" class="location-map-dot dot-image">
+                                        <a target="_blank" href="/assets/docs/porvenir/interno/PCO-EPOR-01 ajuste 2024.pdf" style="--outline-color: none;left: 611px;top: 229px;" class="location-map-dot dot-image">
                                             <img src="/assets/img/map-punto-control.svg" alt="">
                                             <span class="dot-image-text">C1 +</span>
                                         </a>
-                                        <a download="" href="/assets/docs/porvenir/interno/PCO-EPOR-02 ajuste 2024.pdf" style="--outline-color: none;left: 730px;top: 229px;" class="location-map-dot dot-image">
+                                        <a target="_blank" href="/assets/docs/porvenir/interno/PCO-EPOR-02 ajuste 2024.pdf" style="--outline-color: none;left: 730px;top: 229px;" class="location-map-dot dot-image">
                                             <img src="/assets/img/map-punto-control.svg" alt="">
                                             <span class="dot-image-text">C2 +</span>
-                                        </a><a download="" href="/assets/docs/porvenir/interno/PCP-EPOR-03 ajuste 2024.pdf" style="--outline-color: none;left: 579px;top: 362px;" class="location-map-dot dot-image">
+                                        </a>
+                                        <a target="_blank" href="/assets/docs/porvenir/interno/PCP-EPOR-03 ajuste 2024.pdf" style="--outline-color: none;left: 579px;top: 362px;" class="location-map-dot dot-image">
                                             <img src="/assets/img/map-punto-control.svg" alt="">
                                             <span class="dot-image-text">C3 +</span>
-                                        </a><a download="" href="/assets/docs/porvenir/interno/PCP-EPOR-04 ajuste 2024.pdf" style="--outline-color: none;left: 602px;top: 382px;" class="location-map-dot dot-image">
+                                        </a>
+                                        <a target="_blank" href="/assets/docs/porvenir/interno/PCP-EPOR-04 ajuste 2024.pdf" style="--outline-color: none;left: 602px;top: 382px;" class="location-map-dot dot-image">
                                             <img src="/assets/img/map-punto-control.svg" alt="">
                                             <span class="dot-image-text">C4 +</span>
                                         </a>
@@ -3531,7 +3525,7 @@
                                     <div
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="porvenir-sre-2">
-                                        <a download="" href="/assets/docs/porvenir/externo/PCE-EPOR-01 ajuste 2024.pdf" style="--outline-color: none;left: 942px;top: 256px;" class="location-map-dot dot-image">
+                                        <a target="_blank" href="/assets/docs/porvenir/externo/PCE-EPOR-01 ajuste 2024.pdf" style="--outline-color: none;left: 942px;top: 256px;" class="location-map-dot dot-image">
                                             <img src="/assets/img/map-punto-control-externo.svg" alt="">
                                             <span class="dot-image-text">PCE 1 +</span>
                                         </a>
