--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -1916,7 +1916,7 @@
                                         <!-- Columna derecha -->
                                         <div data-target="porvenir-operaciones-13"
                                             style="gap: 16px"
-                                            class="d-flex align-items-center card-interactive-icons__container mt-1">
+                                            class="d-flex align-items-center card-interactive-icons__container">
                                             <div
                                                 class="card-interactive-icons___box-icon small"
                                                 style="--border-fill: #21a605; --hover-color: #FFFFFF;">
@@ -3390,7 +3390,7 @@
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-9">
                                         <!-- Item 1 -->
-                                        <span style="--outline-color: #21a605;left: 558px;top: 280px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 564px;top: 281px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-10">
@@ -3422,9 +3422,9 @@
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-13">
                                         <!-- Item 1 -->
-                                        <span style="--outline-color: #21a605;left: 329px;top: 258px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 327px;top: 258px;" class="location-map-dot"></span>
                                         <!-- Item 2 -->
-                                        <span style="--outline-color: #21a605;left: 596px;top: 273px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 594px;top: 273px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-14">
@@ -4106,12 +4106,13 @@
                                 <div
                                     class="col-xs-12 col-md-8 px-2 text-center">
                                     <h5 class="font-weight-bold text-light m-0">
-                                        Permiso de Emisiones / vertimientos ARI
+                                        Permiso de Emisiones / vertimientos ARnD
                                     </h5>
                                     <p class="text-light">(Resolución 500.41-14-1090 de 2014 )</p>
                                     <a
                                         class="button-oc-2024 color-light my-2 d-inline-block"
-                                        href>Ver más</a>
+                                        target="_blank"
+                                        href="/assets/docs/porvenir/licencias/permiso-de-emisiones/R_1090_2014_VIGENTE.pdf">Ver más</a>
                                 </div>
                             </div>
 
@@ -4130,7 +4131,9 @@
                                     <p class="text-light">(Resolución 200.41-17-2212 de 2017 )</p>
                                     <a
                                         class="button-oc-2024 color-light my-2 d-inline-block"
-                                        href>Ver más</a>
+                                        href="/assets/docs/porvenir/licencias/permiso-de-vertimientos/R_1029_2017_MODIFICACION.pdf"
+                                        target="_blank"
+                                        >Ver más</a>
                                 </div>
                             </div>
                         </div>
