fix: adjust Cusiana sello

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -43,7 +43,7 @@
               <div style="gap: 10px; box-sizing: border-box"
                 class="d-flex flex-row mt-3 mt-lg-5 mb-5 mb-lg-0 certifieds">
                 <img class="img-fluid" src="/assets/img/grupo-765.webp" alt />
-                <img class="img-fluid" src="/assets/img/cusiana/ahorra-o-nunca.svg" alt />
+                <img class="img-fluid" src="/assets/img/cusiana/ahorrar-gris.png" alt />
                 <img class="img-fluid"
                   src="/assets/img/cusiana/repite-el-ciclo.svg" alt />
                 <img class="img-fluid"
