fix: coveñas final ambiental

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -445,7 +445,7 @@
                       <div class="card-interactive-icons___box-description">
                         <p>
                           Aguas <br />
-                          Subterraneas
+                          Subterráneas
                         </p>
                       </div>
                     </div>
