--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -720,7 +720,7 @@
                       <div class="card-interactive-icons___box-description">
                         <p>
                           Aguas <br />
-                          Subterraneas
+                          Subterráneas
                         </p>
                       </div>
                     </div>
@@ -5744,76 +5744,25 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-monitoreo d-none"
-                    id="covenas-monitoreo-7"
-                  >
-                    <span
-                      style="--outline-color: #ff0000; left: 335px; top: 316px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 274px; top: 348px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 274px; top: 380px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 479px; top: 328px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 502px; top: 335px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 382px; top: 435px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 367px; top: 551px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 683px; top: 420px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 578px; top: 495px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #ff0000; left: 855px; top: 369px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-monitoreo-7">
+                    <span style="--outline-color: #ff0000; left: 335px; top: 316px" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000; left: 274px; top: 348px" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000; left: 274px; top: 380px" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 467px;top: 325px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000;left: 489px;top: 331px;" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000; left: 382px; top: 435px" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000; left: 367px; top: 551px" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000; left: 683px; top: 420px" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000; left: 578px; top: 495px" class="location-map-dot"></span>
+                    <span style="--outline-color: #ff0000; left: 855px; top: 369px" class="location-map-dot"></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-monitoreo d-none"
-                    id="covenas-monitoreo-8"
-                  >
-                    <span
-                      style="--outline-color: #8d12ff; left: 364px; top: 305px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #8d12ff; left: 273px; top: 356px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #8d12ff; left: 347px; top: 382px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #8d12ff; left: 390px; top: 437px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #8d12ff; left: 464px; top: 324px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-monitoreo-8">
+                    <span style="--outline-color: #8d12ff; left: 364px; top: 305px" class="location-map-dot"></span>
+                    <span style="--outline-color: #8d12ff; left: 273px; top: 356px" class="location-map-dot"></span>
+                    <span style="--outline-color: #8d12ff; left: 347px; top: 382px" class="location-map-dot"></span>
+                    <span style="--outline-color: #8d12ff; left: 390px; top: 437px" class="location-map-dot"></span>
+                    <span style="--outline-color: #8d12ff;left: 459px;top: 322px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -5826,50 +5775,23 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-monitoreo d-none"
-                    id="covenas-monitoreo-10"
-                  >
+                  <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-monitoreo-10">
                     <!-- item 1 -->
-                    <span
-                      style="--outline-color: #fc10ff; left: 237px; top: 286px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #fc10ff; left: 237px; top: 286px" class="location-map-dot"></span>
                     <!-- item 2 -->
-                    <span
-                      style="--outline-color: #fc10ff; left: 272px; top: 353px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #fc10ff;left: 269px;top: 356px;" class="location-map-dot"></span>
                     <!-- item 3 -->
-                    <span
-                      style="--outline-color: #fc10ff; left: 295px; top: 376px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #fc10ff; left: 295px; top: 376px" class="location-map-dot"></span>
                     <!-- item 4 -->
-                    <span
-                      style="--outline-color: #fc10ff; left: 345px; top: 377px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #fc10ff; left: 345px; top: 377px" class="location-map-dot"></span>
                     <!-- item 5 -->
-                    <span
-                      style="--outline-color: #fc10ff; left: 470px; top: 324px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #fc10ff; left: 470px; top: 324px" class="location-map-dot"></span>
                     <!-- item 6 -->
-                    <span
-                      style="--outline-color: #fc10ff; left: 394px; top: 430px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #fc10ff; left: 394px; top: 430px" class="location-map-dot"></span>
                     <!-- item 7 -->
-                    <span
-                      style="--outline-color: #fc10ff; left: 602px; top: 487px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #fc10ff;left: 609px;top: 478px;" class="location-map-dot"></span>
                     <!-- item 8 -->
-                    <span
-                      style="--outline-color: #fc10ff; left: 863px; top: 362px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #fc10ff; left: 863px; top: 362px" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6023,12 +5945,7 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-13"
                   >
-                    <img
-                      src="/assets/img/maps/fuente-emision-ruido.webp"
-                      alt="Fuente de Emisión de Ruido"
-                      class="location-map-zona"
-                      style="position: absolute; left: 365px; top: 320px"
-                    />
+                    <img src="/assets/img/covenas/fuente-emision-ruido-covenas.webp" alt="Fuente de Emisión de Ruido" class="location-map-zona" style="position: absolute;left: 338px;top: 311px;">
                   </div>
 
                   <div
