--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -593,7 +593,7 @@
                                                 class="card-interactive-icons___box-description">
                                                 <p>
                                                     Aguas <br />
-                                                    Subterraneas
+                                                    Subterráneas
                                                 </p>
                                             </div>
                                         </div>
