--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6030,35 +6030,17 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-4"
-                  >
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-4">
                     <!-- item 1 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 442px; top: 318px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 450px;top: 319px;" class="location-map-dot"></span>
                     <!-- item 2 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 460px; top: 321px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 467px;top: 323px;" class="location-map-dot"></span>
                     <!-- item 3 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 478px; top: 325px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 483px;top: 326px;" class="location-map-dot"></span>
                     <!-- item 4 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 498px; top: 328px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 497px;top: 329px;" class="location-map-dot"></span>
                     <!-- item 5 -->
-                    <span
-                      style="--outline-color: #27ff00; left: 517px; top: 332px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 511px;top: 332px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6101,10 +6083,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-7"
                   >
-                    <span
-                      style="--outline-color: #27ff00; left: 408px; top: 300px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 402px;top: 304px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6210,17 +6189,14 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-13"
                   >
-                    <span
-                      style="--outline-color: #27ff00; left: 440px; top: 354px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 444px;top: 351px;" class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-15">
                     <!--item 1-->
-                      <span style="--outline-color: #27ff00;left: 463px;top: 343px;" class="location-map-dot"></span>
+                      <span style="--outline-color: #27ff00;left: 458px;top: 343px;" class="location-map-dot"></span>
                     <!--item 2-->
-                      <span style="--outline-color: #27ff00;left: 451px;top: 354px;" class="location-map-dot"></span>
+                      <span style="--outline-color: #27ff00;left: 444px;top: 353px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6237,10 +6213,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-16"
                   >
-                    <span
-                      style="--outline-color: #27ff00; left: 420px; top: 308px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 425px;top: 309px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6257,10 +6230,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-18"
                   >
-                    <span
-                      style="--outline-color: #27ff00; left: 515px; top: 347px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #27ff00;left: 517px;top: 350px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6367,10 +6337,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-25"
                   >
-                    <span
-                      style="--outline-color: #21a605; left: 865px; top: 374px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #21a605;left: 864px;top: 370px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6383,25 +6350,13 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-27"
-                  >
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-27">
                     <!-- Item 1 -->
-                    <span
-                      style="--outline-color: #21a605; left: 349px; top: 380px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #21a605;left: 346px;top: 382px;" class="location-map-dot"></span>
                     <!-- Item 2 -->
-                    <span
-                      style="--outline-color: #21a605; left: 273px; top: 358px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #21a605;left: 274px;top: 359px;" class="location-map-dot"></span>
                     <!-- Item 3 -->
-                    <span
-                      style="--outline-color: #21a605; left: 382px; top: 443px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #21a605;left: 383px;top: 444px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6414,20 +6369,11 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-29"
-                  >
-                  <!--item 1-->
-                    <span
-                      style="--outline-color: #21a605; left: 267px; top: 383px"
-                      class="location-map-dot"
-                    ></span>
-                    <!--item 2-->
-                    <span
-                      style="--outline-color: #21a605; left: 314px; top: 369px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-29">
+                    <!--item 1-->
+                      <span style="--outline-color: #21a605;left: 271px;top: 385px;" class="location-map-dot"></span>
+                      <!--item 2-->
+                      <span style="--outline-color: #21a605;left: 317px;top: 368px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6474,10 +6420,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-34"
                   >
-                    <span
-                      style="--outline-color: #21a605; left: 333px; top: 384px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #21a605;left: 339px;top: 381px;" class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-35">
@@ -6501,10 +6444,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-37"
                   >
-                    <span
-                      style="--outline-color: #21a605; left: 351px; top: 450px"
-                      class="location-map-dot"
-                    ></span>
+                    <span style="--outline-color: #21a605;left: 351px;top: 453px;" class="location-map-dot"></span>
                   </div>
 
                   <div
